--- a/GTSpecDB-master/GTSpecDB.Editor/App.config
+++ b/GTSpecDB-master/GTSpecDB.Editor/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="GTSpecDB.Editor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -11,4 +16,90 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+    <userSettings>
+        <GTSpecDB.Editor.Properties.Settings>
+            <setting name="Language" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Multi_Copy_ID_1" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_2" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_3" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_4" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_5" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_6" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_7" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_8" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_9" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_10" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_11" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_12" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_13" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_14" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_15" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_16" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_17" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_18" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_19" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_20" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_21" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_22" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_23" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_24" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_25" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Multi_Copy_ID_26" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </GTSpecDB.Editor.Properties.Settings>
+    </userSettings>
 </configuration>
